--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <body>
     <textarea placeholder="Cat facts go here!" id="catInfo" onblur="saveCursorPosition(this)"></textarea>
-
-    <br>
+    <div id="preview" style="display: none;"></div>
     <select id="catFacts">
         <option value="">Choose a cat fact:</option>
         <option value="Cats can jump up to six times their length in a single bound.">Cats can jump up to six times
@@ -26,8 +25,8 @@
         <option value="Cats have a special reflective layer in their eyes that helps them see better in the dark.">Cats
             have a special reflective layer in their eyes that helps them see better in the dark.</option>
     </select>
-    <button onclick="addCatFact()">Add Cat Fact</button>
-    <button onclick="addAtCursor()">Add at Cursor</button>
+    <button onclick="addAtEnd()">Add Cat Fact</button>
+    <button onclick="addAtCursor()" onmouseenter="showPreview()" onmouseleave="hidePreview()">Add at Cursor</button>
 
 </body>
 
