--- a/index.html
+++ b/index.html
@@ -4,30 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Demo: Add text at Cursor</title>
     <script src="index.js"></script>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <textarea placeholder="Cat facts go here!" id="catInfo" onscroll="setScrollPosition(this)"></textarea>
-    <div id="preview" style="display: none;"></div>
-    <select id="catFacts">
-        <!-- <option value="">Choose a cat fact:</option> -->
-        <option value="Cats can jump up to six times their length in a single bound.">Cats can jump up to six times
-            their length in a single bound.</option>
-        <option value="Cats have five toes on their front paws, but only four toes on their back paws.">Cats have five
-            toes on their front paws, but only four toes on their back paws.</option>
-        <option value="Cats can make over 100 different sounds, but dogs can only make about 10.">Cats can make over 100
-            different sounds, but dogs can only make about 10.</option>
-        <option value="Cats spend an average of 2/3 of their lives sleeping.">Cats spend an average of 2/3 of their
-            lives sleeping.</option>
-        <option value="Cats have a special reflective layer in their eyes that helps them see better in the dark.">Cats
-            have a special reflective layer in their eyes that helps them see better in the dark.</option>
-    </select>
-    <button onclick="addAtEnd()">Add Cat Fact</button>
-    <button onclick="addAtCursor()" onmouseenter="showPreview()" onmouseout="hidePreview()">Add at Cursor</button>
-
+    <div class="container mt-5">
+        <h1>Demo: Add text to box at Cursor</h1>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="catInfo">Cat Facts</label>
+                    <textarea placeholder="Cat facts go here!" id="catInfo"
+                        onscroll="setScrollPosition(this)"></textarea>
+                    <div id="preview" style="display: none;"></div>
+                </div>
+                <div class="form-group mt-2">
+                    <label for="catFacts">Choose a cat fact:</label>
+                    <select class="form-control" id="catFacts">
+                        <option value="">Choose a cat fact:</option>
+                        <option value="Cats can jump up to six times their length in a single bound.">Cats can jump up
+                            to
+                            six times their length in a single bound.</option>
+                        <option value="Cats have five toes on their front paws, but only four toes on their back paws.">
+                            Cats
+                            have five toes on their front paws, but only four toes on their back paws.</option>
+                        <option value="Cats can make over 100 different sounds, but dogs can only make about 10.">Cats
+                            can
+                            make over 100 different sounds, but dogs can only make about 10.</option>
+                        <option value="Cats spend an average of 2/3 of their lives sleeping.">Cats spend an average of
+                            2/3
+                            of their lives sleeping.</option>
+                        <option value="Cats have a special reflective layer in their eyes that helps them see better in the
+                            dark.">Cats have a special reflective layer in their eyes that helps them see better in the
+                            dark.</option>
+                    </select>
+                </div>
+                <div class="mt-2 col-12 text-center text-md-end">
+                    <button class="btn btn-primary" onclick="addAtEnd()">Add Cat Fact</button>
+                    <button class="btn btn-primary" onclick="addAtCursor()" onmouseenter="showPreview()"
+                        onmouseout="hidePreview()">Add at Cursor</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
