--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo: Add text at Cursor</title>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -22,9 +22,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="catInfo">Cat Facts</label>
-                    <textarea placeholder="Cat facts go here!" id="catInfo"
-                        onscroll="setScrollPosition(this)"></textarea>
-                    <div id="preview" style="display: none;"></div>
+                    <textarea placeholder="Cat facts go here!" id="catInfo"></textarea>
                 </div>
                 <div class="form-group mt-2">
                     <label for="catFacts">Choose a cat fact:</label>
@@ -48,13 +46,15 @@
                     </select>
                 </div>
                 <div class="mt-2 col-12 text-center text-md-end">
-                    <button class="btn btn-primary" onclick="addAtEnd()">Add Cat Fact</button>
-                    <button class="btn btn-primary" onclick="addAtCursor()" onmouseenter="showPreview()"
-                        onmouseout="hidePreview()">Add at Cursor</button>
+                    <button class="btn btn-primary" onclick="TextAreaTools.addAtEnd()">Add Cat Fact</button>
+                    <button class="btn btn-primary" onclick="TextAreaTools.addAtCursor()"
+                        onmouseenter="TextAreaTools.showPreview()" onmouseout="TextAreaTools.hidePreview()">Add at
+                        Cursor</button>
                 </div>
             </div>
         </div>
     </div>
+
 </body>
 
 </html>
